--- a/README.html
+++ b/README.html
@@ -605,6 +605,7 @@ body {
 <h1 id="plumber.control">plumber.control</h1>
 <!-- badges: start -->
 
+<p><a href="https://github.com/vanhry/plumber.control/actions"><img src="data:text/plain; charset=utf-8,Not%20Found" alt="R build status" /></a></p>
 <!-- badges: end -->
 
 <p>The goal of plumber.control is to control all of your R plumber (actually any http based) services in one place.</p>
@@ -647,6 +648,7 @@ body {
 <p>Build Docker</p>
 <pre class="shell"><code>docker build . -t user/plumbercontrol_app -f Dockerfile.min
 </code></pre>
+<p>Project was created using <a href="https://github.com/ThinkR-open/golem">golem</a> package</p>
 
 </body>
 </html>
